css/content-search-filtering.css
.iwb-notice {
  display: block !important;
  margin: .5em .5em 1em .5em !important;
  padding: .5em .5em .5em 1em !important;
  border-left: 3px solid #FFCC33 !important;
  font-size: 14px !important;
  font-family: sans-serif;
}
.iwb-notice-content {
  color: white !important;
  mix-blend-mode: difference !important;
}
.iwb-notice a {
  text-decoration: underline !important;
  color: white !important;
  mix-blend-mode: difference !important;
}
.iwb-hide {
  display: none !important;
}
.iwb-show {
  display: block !important;
}
.iwb-new-link-container {
  display: block;
  font-size: 12px !important;
  font-family: sans-serif;
  text-decoration: none;
  padding-left: 5px;
  position: relative;
}
.iwb-new-link {
  display: inline-block;
  text-decoration: none;
  position: relative;
}
.iwb-new-link:hover {
  text-decoration: none;
  z-index: 9999999;
}
.iwb-new-link button {
  cursor: pointer;
  color: white;
  background: #005799;
  border: 0px solid #fff;
  border-radius: 10px;
  padding: 5px 10px;
  margin: .5em 0;
  font-size: 1.2em;
  width: fit-content;
  height: auto;
}
.iwb-new-link button:hover {
  background: #00467a;
}
.iwb-new-link button * {
  vertical-align: middle;
}
.iwb-new-link button span {
  /* prevent search engine sites like Mojeek overriding the button styling */
  color: inherit !important;
  text-transform: none;
  font-weight: normal;
  line-height: normal;
  letter-spacing: normal;
}
.iwb-new-link div:first-of-type {
  display: inline-block;
  border-radius: 16px;
  margin-right: 10px;
  width: fit-content;
  height: fit-content;
  line-height: 12px;
  padding: 5px;
}
.iwb-new-link img {
  width: 16px;
  height: 16px;
  filter: drop-shadow(1px 1px 1px rgba(0, 0, 0, 0.5));
}
.iwb-disavow > *:not([class^="iwb-"]):not(.scs_child_rpr) {
  opacity: 60%;
  pointer-events: none;
  cursor: default;
}
.iwb-disavow > a:not([class^="iwb-"]):not(.scs_child_rpr),
.iwb-disavow > *:not([class^="iwb-"]):not(.scs_child_rpr) a,
.iwb-disavow > *:not([class^="iwb-"]):not(.scs_child_rpr) a * {
  text-decoration: line-through !important;
}

.iwb-result-controls {
  display: inline-block;
  margin: .5em;
  font-size: 12px;
  color: white !important;
  mix-blend-mode: difference !important;
}
.iwb-result-controls > div {
  display: inline-block;
  cursor: pointer;
  text-decoration: underline;
  text-decoration-style: dotted;
  text-decoration-thickness: 1px;
  padding: 0 1em;
}

.iwb-notice .iwb-result-controls {
  margin: 8px 0 0 0;
}

